PBI #40267: Make sure the time-range selector will never go out of view.

--- a/Teleopti.Ccc.Web/Teleopti.Ccc.Web/Areas/MyTime/Content/Css/TeamSchedule.css
+++ b/Teleopti.Ccc.Web/Teleopti.Ccc.Web/Areas/MyTime/Content/Css/TeamSchedule.css
@@ -235,6 +235,10 @@
 .dropdown-menu {
 	overflow-y: scroll;
 }
+.dropdown-menu.right-zero {
+	left: initial;
+	right:0;
+}
 .shift-trade-agent-name + .tooltip {
 	white-space: pre-wrap;
 }
